compiler/testData/diagnostics/tests/incompleteCode/diagnosticWithSyntaxError/namedFun.kt
// RUN_PIPELINE_TILL: FRONTEND
// FIR_IDENTICAL
<!NON_MEMBER_FUNCTION_NO_BODY!>fun bar()<!>
